gl33-master/src/test/deca/context/invalid/other/affectation_float_void.deca
// Invalid test
// Affectation d'un flottant à un void

{
   float x;
   void v;

   v = x;
   v = 1.2;
}
